assets/css/style.css
/* ... */
/* Track */
::-webkit-scrollbar-track {
	box-shadow: inset 0 0 5px rgb(99, 98, 98);
	border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: #b10000;
	border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: rgb(150, 145, 145);
}

#loading {
	position: fixed;
	margin: 0px;
	padding: 0px;
	width: 100vw;
	height: 100vh;
	background: #070707 url("https://img.freepik.com/free-vector/technology-web-banner-with-blue-red-lights-streak_1017-34380.jpg?w=1060&t=st=1670677117~exp=1670677717~hmac=8d648d2b692ed861731febc9a312f5ec63362f85ba574b1bf643fac940fe3676") no-repeat center center;
	background-size: cover;
	z-index: 99999;
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
}

.euro {
	font-family: "eurostile", "Nunito";
}

.glow-style {
	font-family: "eurostile", "Nunito" !important;
	z-index: -1;

		text-shadow: 0 0 10px #00d8ff,
		0 0 16px #03bcf4;
	animation: animateText 2s ease-in-out infinite alternate-reverse;
}
.glow-red{
	transition: all 0.3s ease-in-out;
}
.glow-red:hover {
	/* font-family: "eurostile", "Nunito" !important; */
	/* z-index: -1; */
		text-shadow: 0 0 10px #ff0800,
		0 0 16px #ff5623d7;
	animation: animateRedText 2s ease-in-out infinite alternate-reverse;
}

@keyframes animateRedText {
	from {
		text-shadow:0 0 10px #ff0000,
    0 0 15px #ff0000,
    0 0 16px #ff0000;

	}

	to {
		.glow-red {
			text-shadow:0 0 10px #f40303,
			0 0 15px #f40303,
			0 0 16px #f40303;
		  }
		  
	}
}

@keyframes animateText {
	from {
		text-shadow:0 0 10px #00d8ff,
    0 0 15px #00d8ff,
    0 0 16px #00d8ff;

	}

	to {
		.glow-effect {
			text-shadow:0 0 10px #03bcf4,
			0 0 15px #03bcf4,
			0 0 16px #03bcf4;
		  }
		  
	}
}

.back {
	background-color: #7510f7;
	flex: none;
	width: 60%;
}

.purple-text{
	color: 7510f7 !important;
}

.bg {
	background-color: #7510f7;
	height: fit-content;
	z-index: 2;
}

.ls {
	letter-spacing: 1px;
	font-weight: 300;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "eurostile", "Nunito" !important;
}

.skills {
	margin-top: -8rem;
}

.column1,
.column2,
.column {
	display: flex;
	flex-direction: column;
	background-color: #fff;
	padding: 50px 30px;
	height: 500px;
	-webkit-box-flex: 1;

	padding: 0.75rem;
	z-index: 3;
}

.column1,
.column2 {
	border-right: 2px solid rgb(189, 158, 204);
}

.br {
	margin: 50px 30px;
	border: 2px solid #fff;
	border-radius: 5px;
	height: auto;
}

.typewriter h2 {
	color: #fff;
	font-family: monospace;
	overflow: hidden;
	/* Ensures the content is not revealed until the animation */
	border-right: 0.15em solid rgb(26, 2, 48);
	/* The typwriter cursor */
	white-space: nowrap;
	/* Keeps the content on a single line */
	margin: 0 auto;
	/* Gives that scrolling effect as the typing happens */
	letter-spacing: 0.15em;
	/* Adjust as needed */
	animation: typing 4.5s steps(30, end) infinite alternate,
		blink-caret 0.7s step-end infinite;
}

/* The typing effect */
@keyframes typing {
	from {
		width: 0;
	}

	to {
		width: 100%;
	}
}

/* The typewriter cursor effect */
@keyframes blink-caret {

	from,
	to {
		border-color: transparent;
	}

	50% {
		border-color: rgb(33, 32, 34);
	}
}

.fa-react {
	font-size: 49px;
	color: #7410f763;
	animation: rotate 2s infinite;
}

@keyframes rotate {
	from {
		transform: rotate(0deg);
	}

	to {
		transform: rotate(360deg);
	}
}

.skills .card-group {
	width: 70vw;
}

.purple {
	color: #7410f711;
}

.card-body {
	flex: 1;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
}

.card-body>div {
	height: max-content;
}

.border {
	border: 1px solid #33017538 !important;
	border-radius: 20px;
	color: #6829bb;
	transition: all 0.35s ease;
}

.border:hover {
	/* background-color: #752dd3; */
	color: #00f7ff;
	border: 1px solid #262c0c27 !important;

	box-shadow: 2px 2px 15px rgba(0, 198, 233, 0.171);
	border-radius: 20px;
}

.border:hover>i {
	color: #00f7ff !important;
}

.footer {
	/* background-color: #5d12c0; */
	padding: 3rem 1.5rem 2rem;
}

.footer>* {
	font-family: "Nunito";
}

.handles {
	font-size: 25px;
	transition: all 0.3s ease-in-out;
}

.handles:hover {
	color: #00f7ff !important;
	/* border: 1px solid rgba(48, 46, 46, 0); */
	box-shadow: 2px 0px 25px rgba(53, 50, 50, 0.979);
	border-radius: 25px;
	padding: 12px;
	font-size: 30px;
	
    -webkit-font-smoothing: antialiased;
	
	transition-duration: 0.5s;
	cursor: pointer;
}

.created {
	background-color: rgba(44, 44, 44, 0);
	/* text-shadow: 2px 0px 10px rgba(95, 94, 94, 0.281); */
}

.lds-ripple {
	display: inline-block;
	position: relative;
	width: 80px;
	height: 80px;
}

.lds-ripple div {
	position: absolute;
	border: 4px solid #fff;
	opacity: 1;
	border-radius: 50%;
	animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

.lds-ripple div:nth-child(2) {
	animation-delay: -0.5s;
}

@keyframes lds-ripple {
	0% {
		top: 36px;
		left: 36px;
		width: 0;
		height: 0;
		opacity: 1;
	}

	100% {
		top: 0px;
		left: 0px;
		width: 72px;
		height: 72px;
		opacity: 0;
	}
}

.load {
	display: block;
	animation: load 0.5s alternate infinite;
}

@keyframes load {
	from {
		opacity: 0.2;
	}

	to {
		opacity: 0.9;
	}
}

/* counter */

.counter-up {
	background: url("https://images.unsplash.com/photo-1593062096033-9a26b09da705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80") no-repeat;
	min-height: 50vh;
	background-size: cover;
	background-attachment: fixed;
	padding: 0 50px;
	position: relative;
	display: flex;
	align-items: center;
}

.counter-up::before {
	position: absolute;
	content: "";
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	background: rgba(37, 37, 37, 0.8);
}

.counter-up .content {
	z-index: 1;
	position: relative;
	display: flex;
	width: 100%;
	height: 100%;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-between;
}
/* ... */

